# Mongrel

./: .gitignore  CMakeLists.txt  Rakefile  ThirdPartyTracking.txt
basev/: CMakeLists.txt
basev/common/: CMakeLists.txt  basepak.ls.in  decorate.txt  vavoom_decorate_defs.xml  vfxdefs.txt
basev/common/actors/: nativeclasses.txt
basev/common/actors/hexen/: fighterplayer.txt
basev/common/actors/shared/: debris.txt  splashes.txt
basev/common/glshaders/: procsky.fs  procsky.vs  surf_part.fs
basev/hexen/: basepak.ls.in  lockdefs.txt
cmake/modules/: FindDirect3D.cmake
common/: CMakeLists.txt  args.cpp  args.h  array.h  arraystream.cpp  bitstream.cpp  cmdlib.h  common.h  crc.cpp  exception.cpp  exception.h  fmd2defs.h  ftexdefs.h  matrix.cpp  matrix.h  memorystream.cpp  memorystream.h  name.h  scrlib.h  str.cpp  stream.h  wadlib.cpp  xml.cpp  xml.h
engine/: CMakeLists.txt  am_map.cpp  automap.h  build.h  chat.cpp  chat.h  cheats.cpp  cl_local.h  cl_main.cpp  client.h  cmd.cpp  cmd.h  common.h  console.cpp  cvar.cpp  d3d_draw.cpp  d3d_local.h  files.h  finale.cpp  finale.h  fs_dir.cpp  fs_zip.cpp  gamedefs.h  gl_draw.cpp  gl_local.h  gl_main.cpp  gl_model.cpp  gl_poly.cpp  gl_sdl.cpp  gl_sky.cpp  gl_x.cpp  host.cpp  host.h  iline.cpp  in_input.cpp  in_sdl.cpp  in_win32.cpp  infostr.h  input.h  l_glbsp.cpp  (+139 more)
engine/timidity/: gf1.h  sf2.h
progs/: CMakeLists.txt  template.vc
progs/common/: CMakeLists.txt
progs/common/engine/: ActorDisplayWindow.vc  BasePlayer.vc  ClientGameBase.vc  Entity.vc  GameObject.vc  Level.vc  LevelInfo.vc  Object.vc  PlayerReplicationInfo.vc  ScriptsParser.vc  Thinker.vc  Widget.vc  WorldInfo.vc  classes.vc
progs/common/linespec/: Actor.DoomAttack.vc  Actor.DoomSpecific.vc  Actor.FlagsAndAppearance.vc  Actor.GenericAttacks.vc  Actor.Inventory.vc  Actor.Misc.vc  Actor.MissileMovement.vc  Actor.Sound.vc  Actor.Spawn.vc  Actor.Special.vc  Actor.StateJump.vc  Actor.States.vc  ActorMover.vc  AimingCamera.vc  AmbientSound.vc  Ammo.vc  AmmoFillup.vc  ArtiBlastRadius.vc  ArtiDarkServant.vc  ArtiTeleport.vc  ArtiTeleportOther.vc  ArtiTimeBomb.vc  ArtiTomeOfPower.vc  BasicArmor.vc  BasicArmorBonus.vc  BlasterFX1.vc  BridgeBall.vc  CWeapWraithverge.vc  ChickenPlayer.vc  ClericWeapon.vc  ClericWeaponPiece.vc  CloseDoor222.vc  DoomBuilderCamera.vc  DummyStrifeItem.vc  Elevator.vc  EntityEx.Damage.vc  EntityEx.Defaults.vc  EntityEx.Head.vc  EntityEx.Misc.vc  EntityEx.Morph.vc  (+120 more)
progs/common/uibase/: ConDialog.vc  ConDlgChoice.vc  FinaleBackground.vc  HUDMessage.vc  HUDMessageTypeOnFadeOut.vc  MenuBigTextButton.vc  MenuChoice.vc  MenuChoiceEnum.vc  MenuChoiceSkill.vc  MenuChoiceSlider.vc  MenuChoice_LoadSlot.vc  MenuControlKey.vc  MenuScreenControls.vc  MenuScreenJoinGame.vc  MenuScreenLoadGame.vc  MenuScreenMasterList.vc  MenuScreenMouseOptions.vc  MenuScreenSaveGame.vc  MenuScreenScreenResolution.vc  MenuScreenSinglePlayer.vc  MenuScreenSoundOptions.vc  MenuScreenVideoOptions.vc  MenuSelector_SmallLeft.vc  MenuSmallTextButton.vc  MenuSpriteAnim.vc  MenuStaticBitmap.vc  MenuTitleText.vc  StatusBarShared.vc  classes.vc
progs/doom/cgame/: ClientGame.vc  MenuScreenHelp.vc  MenuScreenMain.vc  MenuScreenNewNetGame.vc  MenuScreenOptions.vc  MenuScreenPlayerSetup.vc  StatusBarScreen.vc  TitleScreen.vc
progs/doom/game/: DoomLevelInfo.vc  MainGameInfo.vc  classes.vc
progs/doom2/: cgame.vc
progs/heretic/cgame/: ClientGame.vc  IntermissionScreen.vc  MenuScreenGameplayOptions.vc  MenuScreenHelp.vc
progs/heretic/game/: HereticLevelInfo.vc  MainGameInfo.vc  Player.vc  classes.vc
progs/hexen/: CMakeLists.txt
progs/hexen/cgame/: ClientGame.vc  IntermissionScreen.vc  MenuScreenGameplayOptions.vc  MenuScreenMain.vc  MenuScreenOptions.vc  StatusBarScreen.vc  TitleScreen.vc  classes.vc
progs/hexen/game/: BotPlayer.vc  HexenLevelInfo.vc  MainGameInfo.vc  Player.vc  classes.vc
progs/strife/cgame/: ConSlideshow2.vc  IntermissionScreen.vc  MenuScreenControls2.vc  MenuScreenHelp.vc  MenuScreenNewNetGame.vc  MenuScreenPlayerSetup.vc  MenuScreenQuit.vc  TitleScreen.vc  classes.vc
progs/strife/game/: MainGameInfo.vc  StrifeLevelInfo.vc  classes.vc
tools/: CMakeLists.txt
tools/acc/: CMakeLists.txt  misc.c  parse.c  strlist.c  token.c
tools/glbsp/: CMakeLists.txt
tools/glvis/: CMakeLists.txt  flow.cpp  glvis.cpp  glvisint.h  level.cpp  vector2.h
tools/vcc/: CMakeLists.txt  vcc.h
tools/vlumpy/: CMakeLists.txt
vavoom/libs/core/: arraystream.h  bitstream.h  common.cpp  core.h  crc.h  endian.cpp  endian.h  exception.cpp  log.cpp  log.h  map.h  name.cpp  names.h  str.h  stream.cpp  vector.h  zone.cpp  zone.h
vavoom/progs/common/engine/: ClientGameBase.vc  Entity.vc  GameInfo.vc  Level.vc  LevelInfo.vc  Object.vc  PlayerReplicationInfo.vc  RootWidget.vc  Thinker.vc
vavoom/progs/common/linespec/: Actor.FlagsAndAppearance.vc  Actor.FreezeDeath.vc  Actor.Heretic.vc  Actor.Hexen.vc  Actor.HexenWeapons.vc  Actor.Misc.vc  Actor.MissileMovement.vc  Actor.MonsterAi.vc  Actor.Spawn.vc  Actor.Special.vc  Actor.Strife.vc  Armor.vc  ArtiBoostArmor.vc  ArtiHealingRadius.vc  ArtiPoisonBag.vc  BackpackItem.vc  BasicArmorPickup.vc  BossSpot.vc  BrainState.vc  Bridge.vc  CFlameMissile.vc  CeilingMover.vc  CeilingWaggle.vc  Coin.vc  CustomInventory.vc  DegninOre.vc  (+94 more)
vavoom/source/: am_map.cpp  anorm_dots.h  anorms.h  chat.cpp  cl_local.h  cl_main.cpp  cmd.cpp  console.h  cvar.h  d3d_main.cpp  d3d_poly.cpp  d3d_tex.cpp  debug.cpp  debug.h  drawer.h  files.cpp  fmd2defs.h  fs_local.h  fs_wad.cpp  fwaddefs.h  gamedefs.h  gl_agl.cpp  gl_local.h  gl_sdl.cpp  gl_tex.cpp  gl_win32.cpp  iline.h  in_alleg.cpp  in_input.cpp  infostr.cpp  l_glvis.cpp  language.cpp  language.h  level.h  menu.cpp  menu.h  net_channel.cpp  net_channel_control.cpp  net_channel_level.cpp  net_channel_thinker.cpp  (+98 more)
vavoom/source/timidity/: instrum_sf2.cpp
vavoom/utils/common/: cmdlib.cpp  cmdlib.h  imglib.cpp  imglib.h  scrlib.cpp
vavoom/utils/fixmd2/: fixmd2.cpp
vavoom/utils/master/: main.cpp
vavoom/utils/vcc/: vcc.cpp  vcc.h
vavoom/utils/vlaunch/: vlaunch.cpp
vavoom/utils/vlumpy/: vlumpy.cpp
(+55 files in other folders)
